# fllm-mentalhealth

./: .gitignore  README.md  pyproject.toml
experiments/heterogeneity_aware_pfl/: config.py  data_utils.py  evaluate.py  heterogeneity.py  model_utils.py  utils.py
experiments/v2/: ablations.py  evaluate_v2.py  ffa_lora.py  fusion.py  het_score.py  methods.py  orchestrate.py  orchestrate_ablations.py  plot_counseling_epoch_matched.py  plot_summary_v2.py  run_ablation.py  run_ablations.sh  run_all.sh  run_base.py  run_baselines.sh  run_eval.sh  run_eval_methods.sh  run_fedavg2ep.sh  run_halfbudget.sh  server_v2.py  trainer.py  v2_config.py
experiments/v2/configs/: dual_lora_half_seed42.yaml  dual_lora_half_seed99.yaml  dual_lora_seed42.yaml  dual_lora_seed99.yaml  fedavg_seed42.yaml  fedavg_seed99.yaml  ffa_lora_seed42.yaml  ffa_lora_seed99.yaml  ha_duallora_half_seed42.yaml  ha_duallora_half_seed99.yaml  ha_duallora_seed42.yaml  ha_duallora_seed99.yaml  local_only_seed42.yaml  local_only_seed99.yaml  selective_seed42.yaml  selective_seed99.yaml
experiments/v2/configs/ablations/: dataset_counselchat_fedavg_seed42.yaml  dataset_counselchat_ha_duallora_half_seed42.yaml  dataset_counselchat_selective_seed42.yaml  ha_sched_ha_sched_m0.5_seed42.yaml  ha_sched_ha_sched_m1.5_seed42.yaml  (+7 more)
experiments/v2/results/: het_scores_seed42.json  het_scores_seed99.json
src/fllm/: __init__.py  cent.py  clustering.py  datasplitter.py  embedding.py  eval.py  eval_average.py  fed.py  generate.py  heterogeneity_logging.py  qualitative_eval.py  significance.py
(+376 files in other folders)
