[project]
name = "fllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "datasets>=3.1.0",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "flwr[simulation]>=1.23.0",
    "flwr-datasets>=0.5.0",
    "numpy>=2.3.4",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "hdbscan>=0.8.33",
    "sentencepiece>=0.2.1",
    "torch==2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
    "openai>=2.14.0",
    "matplotlib>=3.10.7",
    "umap-learn>=0.5.11",
    "gensim>=4.4.0",
    "pyarrow>=22.0.0",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu130" },
]

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
fllm = "fllm:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
